--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -1,6 +1,6 @@
 {{define "content"}}
-  {{with .PageData}}
-  <div class="container-fluid current-next">
+{{with .PageData}}
+  <div class="container-fluid header-large current-next">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-11 col-md-10 box-shadow-1">
@@ -137,7 +137,7 @@
       </div>
     </div>
   </div> <!-- /outer containter -->
-  {{end}}
+{{end}}
 {{end}}
 
 {{define "footer-scripts"}}
