--- a/sass/main.scss
+++ b/sass/main.scss
@@ -107,6 +107,22 @@ footer {
   font-weight: 100;
 }
 
+.share-links span {
+  font-size: 1.2em;
+  vertical-align: middle;
+}
+.share-links a {
+  margin: 10px;
+  color: #aaa;
+  text-decoration: none;
+  font-size: 2rem;
+  font-weight: bold;
+  text-shadow: 0px 2px 3px #fff;
+  vertical-align: middle;
+}
+.share-links a:hover {
+  color: $secondary-color;
+}
 // User page styling.
 .user-img {
   //border: #e1e1e1 7px solid;
