--- a/sass/elements/_schedule.scss
+++ b/sass/elements/_schedule.scss
@@ -52,7 +52,7 @@ $shadow: rgba(0, 0, 0, 0.5);
     border-top: 0;
     overflow-y: hidden;
 
-    a {
+    p {
       display: block;
       width: 100%;
       height: 30px;
