--- a/sass/main.scss
+++ b/sass/main.scss
@@ -292,7 +292,7 @@ footer {
   color: #555;
 }
 
-/* Styling for responsive map */
+// Styling for responsive map
 .map-container {
   width: 100%;
   margin: 0 auto;
@@ -307,7 +307,7 @@ footer {
   padding-top: 30px;
 }
 
-/* Signed up page */
+// Signed up page
 .card-logo-container {
   height: 15rem;
   width: auto;
