--- a/sass/elements/_schedule.scss
+++ b/sass/elements/_schedule.scss
@@ -22,6 +22,8 @@ $shadow: rgba(0, 0, 0, 0.5);
 .tables-container {
   width: 100%;
   text-align: center;
+  margin-bottom: 0;
+  padding-bottom: 10px;
 
   .row-headers {
     width: 8%;
