--- a/views/elements/message_box.tmpl
+++ b/views/elements/message_box.tmpl
@@ -6,13 +6,13 @@
   <textarea class="form-control" id="comments" name="message" rows="4" placeholder=
   {{if .MsgBoxError}}
   	"Message cannot be sent at this time, please try again later."
-  {{else if .JukeboxOnAir}}
+  {{else if not .ShowOnAir}}
   	"No shows are on air right now, so there's no-one to send a message to." disabled 
   {{else}}
   	"Why not send a message to the studio presenters? Have a bit of banter, share your opinions or simply request your favourite song?"
   {{end}}></textarea>
   <button id="messagesend"  class="btn btn-primary btn-block" type="submit" value="SEND MESSAGE"
-  {{if .JukeboxOnAir}}
+  {{if not .ShowOnAir}}
   	disabled
   {{end}} 
   >Send Message</button>
