--- a/views/schedule_week.tmpl
+++ b/views/schedule_week.tmpl
@@ -2,13 +2,15 @@
 {{with .PageData}}
 
 <div class="container-fluid header-large current-next mobile-shrink">
-    <div class="row justify-content-center">
-      <div class="col-11 col-md-10 box-shadow-1 mobile-hide">
-        {{template "current_and_next" .}}
-      </div>
-      <div class="col-11 col-md-10 text-center mobile-only">
-        <h1 class="display-3">Schedule</h1>
-        <h4 class="display-5">{{week (index .Schedule.Dates 0)}}</h4>
+  <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-11 col-md-10 box-shadow-1 mobile-hide">
+          {{template "current_and_next" .}}
+        </div>
+        <div class="col-11 col-md-10 text-center mobile-only">
+          <h1 class="display-3">Schedule</h1>
+          <h4 class="display-5">{{week (index .Schedule.Dates 0)}}</h4>
+        </div>
       </div>
     </div>
 </div>
