--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -68,7 +68,7 @@
             <ul>
               <li>Gold Best Entertainment Programme (URY:PM - with K-Spence)</li>
               <li>Gold Best Newcomer (Will Batchelor)</li>
-              <li>Silver Best Newcomer (Matt Stratford)</li>
+              <li>Silver Best Newcomer (Matthew Stratford)</li>
               <li>Bronze Best Technical Achievement (URY Visualisation)</li>
             </ul>
           </div>
