--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -76,7 +76,7 @@
             <h2>2016</h2>
             <ul>
               <li>Gold Best Technical Achievement (Beat the Buzz)</li>
-              <li>Bronze Best Station Branding (URY)</li>
+              <li>Bronze Best Station Branding</li>
               <li>Bronze Kevin Greening Award (URY: Biscuit News)</li>
             </ul>
           </div>
@@ -108,7 +108,7 @@
           <div class="col-md-6 col-lg-6">
             <h2>2012</h2>
             <ul>
-              <li>Silver Best Station (URY)</li>
+              <li>Silver Best Station</li>
               <li>Bronze Best Specialist Music Programming (URY: Coco Electro)</li>
             </ul>
           </div>
