--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -1,188 +1,149 @@
-{{define "content"}}
-{{with .PageData}}
-  <div class="container-fluid header-large current-next">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-11 col-md-10 box-shadow-1">
-        {{template "current_and_next" .}}
-        {{template "banner" .}}
-        </div>
+{{define "content"}} {{with .PageData}}
+<div class="container-fluid header-large current-next">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-11 col-md-10 box-shadow-1">
+        {{template "current_and_next" .}} {{template "banner" .}}
       </div>
     </div>
   </div>
-  <div id="index-infobar" class="container-fluid bg-off-white container-padded">
-    <div class="container container-padded">
-      <div class="row justify-content-center">
-        <div class="pb-4 col-lg-3">
+</div>
+<div id="index-infobar" class="container-fluid bg-off-white container-padded">
+  <div class="container container-padded">
+    <div class="row justify-content-center">
+      <div class="pb-4 col-lg-3">
         {{template "message_box" .}}
-        </div>
-        <div class="col-lg-9">
-          <h2>Get Involved</h2>
-          <hr>
-          <div class="row">
-            <div class="col-lg-6">
-              <p>University Radio York has been alive since 1968, when it became the first legal independent radio station in the UK!</p>
-              <p>Help us continue our legacy by joining the URY team.</p>
-              <p>Contact our teams to find out more.</p>
-            </div>
-            <div class="col-lg-6">
-              <ul class="split-evenly-2 no-bullets">
+      </div>
+      <div class="col-lg-9">
+        <h2>Get Involved</h2>
+        <hr>
+        <div class="row">
+          <div class="col-lg-6">
+            <p>University Radio York has been alive since 1968, when it became the first legal independent radio station in
+              the UK!</p>
+            <p>Help us continue our legacy by joining the URY team.</p>
+            <p>Contact our teams to find out more.</p>
+          </div>
+          <div class="col-lg-6">
+            <ul class="split-evenly-2 no-bullets">
               {{range .Teams}}
-                <li><a href="{{url "/teams/"}}/{{.Alias}}/" title="Find out more about {{.Name}}">{{.Name}}</a></li>
+              <li>
+                <a href="{{url " /teams/ "}}/{{.Alias}}/" title="Find out more about {{.Name}}">{{.Name}}</a>
+              </li>
               {{end}}
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> <!-- /outer containter -->
-  </div>
-  <div id="index-videos" class="container-fluid pt-3 bg-secondary">
-    <h2>URY Sessions</h2>
-    <div id="youtube-video-slider" class="row scroll-horiz pb-3 custom-scrollbar">
-    </div>
-  </div>
-  <div id="index-uryplayer" class="container-fluid container-padded bg-third">
-    <h2>Podcasts</h2>
-    <div class="row scroll-horiz">
-      <div class="col-11 col-sm-7 col-md-3">
-        <div class="card podcast">
-          <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
-          <div class="card-block">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-11 col-sm-7 col-md-3">
-        <div class="card podcast">
-          <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
-          <div class="card-block">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          </div>
-        </div>
-        {{end}}
-      </div>
-    </div> <!-- /outer containter -->
-
-
-    <script>
-        function onGoogleLoad() {
-            gapi.client.setApiKey('AIzaSyCzI5Gvpq1hPlfjvB81EVc0vLv_11eW7NI');
-            gapi.client.load('youtube', 'v3', function() {
-
-                var request = gapi.client.youtube.playlistItems.list({
-                    part: 'snippet',
-                    playlistId: 'PLsxUDJzU4VKDudlmlYb-ImFKreFKAfFln',
-                    maxResults: 12
-                });
-
-                request.execute(function(response) {
-                    for (var i = 0; i < response.items.length; i++) {
-                        $('#youtube-video-slider').append('<div class="col-sm-5 col-md-4 col-lg-3">' +
-                          '<div class="thumbnail">' +
-                              '<a href="//youtube.com/watch?v=' + response.items[i].snippet.resourceId.videoId + '" target="_blank">' +
-                                '<img src="' + response.items[i].snippet.thumbnails.maxres.url +
-                                  '" alt="' + response.items[i].snippet.title + '">' +
-                              '</a>' +
-                          '</div>' +
-                        '</div>');
-                    }
-                });
-            });
-        }
-    </script>
-
-    <script src="https://apis.google.com/js/client.js?onload=onGoogleLoad"></script>
-
-
-
-    <div class="container outer index-videos">
-      <div id="video-container" class="scroll-container">
-        <div class="scroll-body">
-          <h2>URY Sessions</h2>
-          <div id="youtube-video-slider" class="row">
-          </div>
-        </div>
-      </div>
-      <div class="col-11 col-sm-7 col-md-3">
-        <div class="card podcast">
-          <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
-          <div class="card-block">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-11 col-sm-7 col-md-3">
-        <div class="card podcast">
-          <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
-          <div class="card-block">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-11 col-sm-7 col-md-3">
-        <div class="card podcast">
-          <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
-          <div class="card-block">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-11 col-sm-7 col-md-3">
-        <div class="card podcast">
-          <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
-          <div class="card-block">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-11 col-sm-7 col-md-3">
-        <div class="card podcast">
-          <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
-          <div class="card-block">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-11 col-md-3">
-        <div class="card podcast">
-          <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
-          <div class="card-block">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-11 col-md-3">
-        <div class="card podcast">
-          <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
-          <div class="card-block">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </ul>
           </div>
         </div>
       </div>
     </div>
-  </div> <!-- /outer containter -->
-<<<<<<< HEAD
-=======
-{{end}}
-{{end}}
-
-{{define "footer-scripts"}}
+  </div>
+</div>
+<div id="index-videos" class="container-fluid pt-3 bg-secondary">
+  <h2>URY Sessions</h2>
+  <div id="youtube-video-slider" class="row scroll-horiz pb-3 custom-scrollbar">
+  </div>
+</div>
+<div id="index-uryplayer" class="container-fluid container-padded bg-third">
+  <h2>Podcasts</h2>
+  <div class="row scroll-horiz">
+    <div class="col-11 col-sm-7 col-md-3">
+      <div class="card podcast">
+        <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-11 col-sm-7 col-md-3">
+      <div class="card podcast">
+        <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-11 col-sm-7 col-md-3">
+      <div class="card podcast">
+        <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-11 col-sm-7 col-md-3">
+      <div class="card podcast">
+        <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-11 col-sm-7 col-md-3">
+      <div class="card podcast">
+        <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-11 col-sm-7 col-md-3">
+      <div class="card podcast">
+        <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-11 col-sm-7 col-md-3">
+      <div class="card podcast">
+        <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-11 col-sm-7 col-md-3">
+      <div class="card podcast">
+        <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-11 col-md-3">
+      <div class="card podcast">
+        <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-11 col-md-3">
+      <div class="card podcast">
+        <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- /outer containter -->
+{{end}} {{end}} {{define "footer-scripts"}}
 <!-- Youtube slider script -->
 <script>
-var youtubeAPIKey = {{.PageContext.Youtube.APIKey}};
-var youtubePlaylistID = "{{.PageContext.Youtube.PlaylistID}}";
+  var youtubeAPIKey = {{.PageContext.Youtube.APIKey }};
+  var youtubePlaylistID = "{{.PageContext.Youtube.PlaylistID}}";
 </script>
 <script src='{{url "js/index.js"}}'></script>
-<script src="https://apis.google.com/js/client.js?onload=onGoogleLoad"></script>
->>>>>>> development
-{{end}}
+<script src="https://apis.google.com/js/client.js?onload=onGoogleLoad"></script> {{end}}
