Add dark text for forced white/off containers.

--- a/sass/base/_backgrounds.scss
+++ b/sass/base/_backgrounds.scss
@@ -9,6 +9,13 @@
     color: #6Af;
   }
 }
+.bg-off-white, .bg-white {
+  color: #212529;
+
+  a {
+    color: #6Af;
+  }
+}
 
 .bg-primary {
   background: $primary-color !important;
