Fix On Tap Branding.

--- a/views/timeslot.tmpl
+++ b/views/timeslot.tmpl
@@ -17,20 +17,25 @@
 {{end}}
 
 {{define "content"}}
-{{with .PageData}}
+
 <div class="container-fluid current-next">
   <div class="container">
-  {{if .MixcloudAvailable}}
+  {{if .PageData.MixcloudAvailable}}
     <div class="row justify-content-center">
       <div class="col-11 col-md-10 py-2 mixcloud">
-        <h2>URY on Tap: Listen Again</h2>
-        <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?feed={{.Timeslot.MixcloudStatus}}&hide_cover=1&light=1" frameborder="0"></iframe>
-        <a href="#">Listen to more shows on URY On Demand</a>
+        <h2>
+          <a href="/ontap/" title="Goto {{.PageContext.ShortName}} {{.PageContext.ODName}}">
+            {{- .PageContext.ShortName}} {{.PageContext.ODName -}}
+          </a>: Listen Again
+        </h2>
+        <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?feed={{.PageData.Timeslot.MixcloudStatus}}&hide_cover=1&light=1" frameborder="0"></iframe>
+        <a href="/ontap/" title="Goto {{.PageContext.ShortName}} {{.PageContext.ODName}}">Listen to more shows on demand...</a>
       </div>
     </div>
   {{end}}
   </div>
 </div>
+{{with .PageData}}
 <div class="container-fluid bg-off-white">
   <div class="container p-3">
     <div class="row">
