--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -21,6 +21,9 @@ $off-white-color: #e1e1e1;
 $white: #ffffff;
 $blue: #0073e6;
 $red: #d0011b;
+$black: #000000;
+
+$link-blue: #6Af;
 
 //font
 $base-font-size: 16px;
