Only display scheduled seasons.

--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -37,7 +37,7 @@
             <h5>Seasons: {{len .Seasons}}</h5>
           </div>
           <div class="col-6 text-center">
-            <h5>Shows: {{showCount .Seasons}}</h5>
+            <h5>Episodes: {{showCount .Seasons}}</h5>
           </div>
         </div>
       </div>
